--- a/index.html
+++ b/index.html
@@ -13,11 +13,38 @@
 
     <section>
         <h3>Resumen</h3>
-        <p>El futbolista Cristiano Ronaldo, natural
-
+        <p>"El futbolista Cristiano Ronaldo, natural de Madeira Portugal y actual delantero del Real Madrid CF es uno de los deportistas mas laureados del todos los tiempos.Son muchos los momentos clave en la biografia de Cristiano Ronaldo."
         </p>
+    
+    </section>
+        <h3>Datos Personales</h3>
+        <ul>
+            <li>    
+            <li><a href="#">Nombre: Cristiano Ronaldo</a></li>
+            <li><a href="#">Lugar de Nacimiento: Funchal (Madeira,Portugal)</a></li>
+            <li><a href="#">Fecha de Nacimento: 05 de febrero de 1985</a></li>
+        </ul>
+
+    <section>
+        <h3>Formacion</h3>
+        <p>"Cristiano Ronaldo empezó su carrera deportiva a los 8 años de edad cuando en la escuela de futbol La Andorinha. Como despuntó desde tan tierna edad, los clubes C.S.Martitimo y C.D.Nacional pronto mostraron su interés en contar con el jugador."
+        </p>
+
+    <section>
+        <h3>Premios y reconocimientos</h3>
+        <p>"Cristiano Ronaldo ha recibidio un sinfin de distinciones a lo largo de su carrera deportiva (premios entre los que se encuentran, ni mas ni menos, el Balon de Oron, el Jugador del Año de la UEFA o el Jugador Mundial de la FIFA). No obstante, Cristiano también ha recibido una serie de condecoraciones que no están relacionadas con el mundo del futbol como pueden ser:"
+        </p>
+        <ul>
+            <li>    
+            <li><a href="#"> - Comandante de la Orden del Merito de Portugal (2016)</a></li>
+            <li><a href="#"> - Gran Oficial de la Orden del Infante Don Enrique (2014)</a></li>
+            <li><a href="#"> - Medalla al Merito de la Orden de Nuestra Señora de la Concepcion de Vilaviciosa (2006)</a></li>
+            <li><a href="#"> - Distincion Oficial de la Orden del Infante don Enrique (2004)</a></li>
+        </ul>
+    </section>
+
+    <section>
+        <p>"Fuente: https://www.instagram.com/cristiano/</p>
     </section>
 <body>
-    
-</body>
 </html>
